--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+body{
+  width: 100%;
+}
+
+.vertical-center {
+  width: 50%;
+  margin: auto;
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .App {
   text-align: center;
 }
